<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/MatchMatch"
    android:fitsSystemWindows="true"
    android:background="@color/background">
    <include layout="@layout/common_title"/>

    <View style="@style/DividerWidth"/>

    <ScrollView
        style="@style/MatchWrap">
        <LinearLayout
            style="@style/MatchWrap"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen15"
                android:background="@color/whiteColors">
                <TextView
                    android:layout_width="@dimen/dimen61"
                    android:layout_height="wrap_content"
                    android:text="@string/withdrawalAmount"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize15"/>
                <EditText
                    android:id="@+id/et_withdrawmoney"
                    style="@style/MatchMatch"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize14"
                    android:textColorHint="@color/hintColors"
                    android:hint="@string/withdrawalAmountHint"
                    android:background="@android:color/transparent"
                    android:paddingLeft="@dimen/dimen26"
                    android:singleLine="true"
                    android:inputType="numberDecimal|number"/>
            </LinearLayout>

            <include layout="@layout/common_dividerwidth1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen33"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen15"
                android:background="@color/whiteColors">
                <TextView
                    style="@style/WrapWrap"
                    android:text="@string/CurrentBalanceNoSymbol"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize15"/>
                <TextView
                    android:id="@+id/tv_yue"
                    style="@style/WrapWrap"
                    android:maxEms="11"
                    android:singleLine="true"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize15"/>
                <TextView
                    style="@style/WrapWrap"
                    android:text="@string/comma"
                    android:textColor="@color/hintColors"
                    android:textSize="@dimen/textsize15"/>
                <TextView
                    android:id="@+id/tv_withdrawall"
                    style="@style/WrapWrap"
                    android:text="@string/allWithdrawal"
                    android:textColor="@color/greenColors"
                    android:textSize="@dimen/textsize15"/>
            </LinearLayout>

            <include layout="@layout/common_dividerwidth1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen15"
                android:background="@color/whiteColors">
                <TextView
                    android:layout_width="@dimen/dimen61"
                    android:layout_height="wrap_content"
                    android:text="@string/withdrawalWay"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize15"/>
                <LinearLayout
                    android:id="@+id/ll_typealipy"
                    style="@style/WrapMatch"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/dimen26"
                    android:gravity="center_vertical">
                    <ImageView
                        android:id="@+id/iv_typealipy"
                        android:layout_width="@dimen/dimen18"
                        android:layout_height="@dimen/dimen18"
                        android:src="@mipmap/mineaddress_selectxxx"/>
                    <TextView
                        style="@style/WrapWrap"
                        android:text="@string/alipay"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/dimen14"
                        android:layout_marginLeft="@dimen/dimen11"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_typeweixin"
                    style="@style/WrapMatch"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/dimen38"
                    android:gravity="center_vertical">
                    <ImageView
                        android:id="@+id/iv_typeweixin"
                        android:layout_width="@dimen/dimen18"
                        android:layout_height="@dimen/dimen18"
                        android:src="@mipmap/mineaddress_unselectxxx"/>
                    <TextView
                        style="@style/WrapWrap"
                        android:text="@string/thirdweixin"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/dimen14"
                        android:layout_marginLeft="@dimen/dimen11"/>
                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/common_dividerwidth1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen15"
                android:background="@color/whiteColors">
                <TextView
                    android:layout_width="@dimen/dimen61"
                    android:layout_height="wrap_content"
                    android:text="@string/withdrawalAccount"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize15"/>

                <EditText
                    android:id="@+id/et_accountnumber"
                    style="@style/MatchMatch"
                    android:background="@android:color/transparent"
                    android:hint="@string/withdrawalAccountHint"
                    android:paddingLeft="@dimen/dimen26"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColors"
                    android:textSize="@dimen/textsize14" />
            </LinearLayout>

            <include layout="@layout/common_dividerwidth1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen45"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen15"
                android:background="@color/whiteColors">
                <TextView
                    android:layout_width="@dimen/dimen61"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize15"/>
                <EditText
                    android:id="@+id/et_name"
                    style="@style/MatchMatch"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textsize14"
                    android:textColorHint="@color/hintColors"
                    android:hint="@string/withdrawalName"
                    android:background="@android:color/transparent"
                    android:paddingLeft="@dimen/dimen26"
                    android:singleLine="true"/>
            </LinearLayout>

            <View
                style="@style/DividerWidth"/>

            <TextView
                android:id="@+id/tv_determine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen40"
                android:background="@drawable/shape_login1"
                android:text="@string/determine"
                android:textColor="@color/whiteColors"
                android:textSize="@dimen/textsize16"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dimen15"
                android:layout_marginRight="@dimen/dimen15"
                android:layout_marginTop="@dimen/dimen33"
                android:layout_marginBottom="@dimen/dimen28"/>
            <TextView
                style="@style/WrapWrap"
                android:text="@string/ruleDescription"
                android:layout_margin="@dimen/dimen15"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>