<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <TextView style="@style/DividerWidth" />


    <ScrollView
        style="@style/MatchAuto"
        android:scrollbars="none">

        <LinearLayout
            style="@style/MatchWrap"
            android:orientation="vertical">


            <TextView
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen15"
                android:text="@string/name"
                android:textColor="@color/tabColors"
                android:textSize="@dimen/textsize13" />


            <EditText
                android:id="@+id/et_name"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:hint="@string/pleaseFillYourName"
                android:paddingBottom="@dimen/dimen15"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen7"
                android:textColor="@color/tabColors"
                android:textColorHint="@color/byTheDayHintColors"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="@dimen/textsize16" />

            <TextView
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen15"
                android:text="@string/contactWay"
                android:textColor="@color/tabColors"
                android:textSize="@dimen/textsize13" />


            <EditText
                android:id="@+id/et_contactWay"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:hint="@string/pleaseFillContactWay"
                android:paddingBottom="@dimen/dimen15"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen7"
                android:textColor="@color/tabColors"
                android:textColorHint="@color/byTheDayHintColors"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="@dimen/textsize16" />

            <TextView
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen15"
                android:text="@string/passportNum"
                android:textColor="@color/tabColors"
                android:textSize="@dimen/textsize13" />


            <EditText
                android:id="@+id/et_passportNum"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:hint="@string/pleaseFillPassportNum"
                android:paddingBottom="@dimen/dimen15"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen7"
                android:textColor="@color/tabColors"
                android:textColorHint="@color/byTheDayHintColors"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="@dimen/textsize16" />

            <TextView
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen15"
                android:text="@string/idNumber"
                android:textColor="@color/tabColors"
                android:textSize="@dimen/textsize13" />


            <EditText
                android:id="@+id/et_idNumber"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:hint="@string/pleaseFillIdNumber"
                android:paddingBottom="@dimen/dimen15"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen7"
                android:textColor="@color/tabColors"
                android:textColorHint="@color/byTheDayHintColors"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="@dimen/textsize16" />


            <include layout="@layout/item_singletransport_passengersnumber" />


            <TextView
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen15"
                android:text="@string/origin"
                android:textColor="@color/tabColors"
                android:textSize="@dimen/textsize13" />


            <LinearLayout
                android:id="@+id/ll_origin"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_origin"
                    style="@style/AutoWrap"
                    android:gravity="center_vertical"
                    android:hint="@string/selectOrigin"
                    android:paddingBottom="@dimen/dimen15"
                    android:paddingLeft="@dimen/dimen15"
                    android:paddingTop="@dimen/dimen7"
                    android:textColor="@color/tabColors"
                    android:textColorHint="@color/byTheDayHintColors"
                    android:textSize="@dimen/textsize16" />

                <ImageView
                    style="@style/WrapWrap"
                    android:paddingRight="@dimen/dimen15"
                    android:src="@mipmap/arrow" />

            </LinearLayout>


            <TextView
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen15"
                android:text="@string/whereToPlay"
                android:textColor="@color/tabColors"
                android:textSize="@dimen/textsize13" />


            <LinearLayout
                android:id="@+id/ll_whereToPlay"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_whereToPlay"
                    style="@style/AutoWrap"
                    android:gravity="center_vertical"
                    android:hint="@string/selectAdress"
                    android:paddingBottom="@dimen/dimen15"
                    android:paddingLeft="@dimen/dimen15"
                    android:paddingTop="@dimen/dimen7"
                    android:textColor="@color/tabColors"
                    android:textColorHint="@color/byTheDayHintColors"
                    android:textSize="@dimen/textsize16" />

                <ImageView
                    style="@style/WrapWrap"
                    android:paddingRight="@dimen/dimen15"
                    android:src="@mipmap/arrow" />

            </LinearLayout>


            <TextView
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen15"
                android:text="@string/destination"
                android:textColor="@color/tabColors"
                android:textSize="@dimen/textsize13" />


            <LinearLayout
                android:id="@+id/ll_destination"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_destination"
                    style="@style/AutoWrap"
                    android:gravity="center_vertical"
                    android:hint="@string/chooseReachCity"
                    android:paddingBottom="@dimen/dimen15"
                    android:paddingLeft="@dimen/dimen15"
                    android:paddingTop="@dimen/dimen7"
                    android:textColor="@color/tabColors"
                    android:textColorHint="@color/byTheDayHintColors"
                    android:textSize="@dimen/textsize16" />

                <ImageView
                    style="@style/WrapWrap"
                    android:paddingRight="@dimen/dimen15"
                    android:src="@mipmap/arrow" />

            </LinearLayout>


            <TextView
                style="@style/MatchWrap"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen15"
                android:paddingTop="@dimen/dimen15"
                android:text="@string/serviceDate"
                android:textColor="@color/tabColors"
                android:textSize="@dimen/textsize13" />


            <LinearLayout
                android:id="@+id/ll_serviceDate"
                style="@style/MatchWrap"
                android:background="@color/whiteColors"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_serviceDate"
                    style="@style/AutoWrap"
                    android:gravity="center_vertical"
                    android:hint="@string/optionDate"
                    android:paddingBottom="@dimen/dimen15"
                    android:paddingLeft="@dimen/dimen15"
                    android:paddingTop="@dimen/dimen7"
                    android:textColor="@color/tabColors"
                    android:textColorHint="@color/byTheDayHintColors"
                    android:textSize="@dimen/textsize16" />

                <ImageView
                    style="@style/WrapWrap"
                    android:paddingRight="@dimen/dimen15"
                    android:src="@mipmap/arrow" />

            </LinearLayout>


            <include layout="@layout/item_bythedag_bags" />


            <EditText
                android:id="@+id/et_remark"
                style="@style/MatchWrap"
                android:layout_marginBottom="@dimen/dimen18"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/whiteColors"
                android:gravity="left|top"
                android:hint="@string/pleaseFillInRemarks"
                android:minHeight="@dimen/dimen85"
                android:padding="@dimen/dimen15"
                android:textColorHint="@color/byTheDayHintColors"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="@dimen/textsize15" />

            <include layout="@layout/common_bottombar" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>